--- a/ideaForge/App.xaml
+++ b/ideaForge/App.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ideaForge"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:map1="clr-namespace:MapControl;assembly=MapControl.WPF"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:map1="clr-namespace:MapControl;assembly=MapControl.WPF"
              mc:Ignorable="d"
               Startup="OnStartup">
     <Application.Resources>
@@ -192,6 +193,25 @@
                         <Setter Property="Foreground" Value="#545864"/>
                         <Setter Property="FontSize" Value="14"/>
                         <Setter Property="FontWeight" Value="SemiBold"/>
+                        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                    </Style>
+                    <Style TargetType="Button" x:Key="imagebtn">
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#5D9115"/>
+                                <Setter Property="Foreground" Value="White"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+
+                    <Style TargetType="DataGridColumnHeader">
+                        <Setter Property="FontFamily" Value="Segoe UI"/>
+                        <Setter Property="Foreground" Value="#545864"/>
+                        <Setter Property="FontSize" Value="16"/>
+                        <Setter Property="BorderBrush" Value="#DFE7F2"/>
+                        <Setter Property="BorderThickness" Value="1 0 0 1"/>
+                        <Setter Property="Background" Value="White"/>
+                        <Setter Property="FontWeight" Value="Regular"/>
                         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
                     </Style>
                 </ResourceDictionary>
