--- a/ideaForge/Popups/SortPopup.xaml
+++ b/ideaForge/Popups/SortPopup.xaml
@@ -4,27 +4,25 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ideaForge.Popups"
+             xmlns:dp="clr-namespace:ideaForge.Usercontrols"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="130">
-    <Border 
+             Background="Transparent"
            
-            CornerRadius="1"
-        Background="White"
-        Padding="10">
-        <Border.BitmapEffect>
-            <DropShadowBitmapEffect Color="White"/>
-        </Border.BitmapEffect>
-        <Grid
-            Background="White">
+             d:DesignHeight="150" d:DesignWidth="250">
 
+
+    <Border BorderBrush="LightGray" BorderThickness="1" Width="200" Height="150">
+        <Grid
+           
+            Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="20"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="26"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="38"/>
             </Grid.RowDefinitions>
-            <RadioButton Margin="3 0 0 0" Grid.Row="0"
+            <RadioButton VerticalContentAlignment="Center" Margin="3 0 0 0" Grid.Row="0"
                          Content="Ascending"
                          x:Name="ascending"
                          FontSize="12"/>
@@ -34,23 +32,32 @@
                          FontSize="12"/>
             <Label Grid.Row="2" Content="Search By"
                    FontSize="12"
-                   Margin="8 0 0 0"/>
-            <TextBox Grid.Row="3" Height="2" Width="80"
-                     Margin="2 0 0 5"
-                     BorderThickness="1"
-                     BorderBrush="Black" />
+                   Margin="22 0 0 0"/>
+            <Border Grid.Row="3"
+                      BorderThickness="1"
+                     BorderBrush="#A9ABB1"
+                    CornerRadius="5"
+                    Margin="28 5 10 5"
+                    Height="25"
+                    >
+                <TextBox  Grid.Row="3"
+                     Margin="0,0,0,0"
+                    x:Name="txtFilter"
+                     />
+            </Border>
+
+
             <Grid Grid.Row="4">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="55"/>
-                    <ColumnDefinition Width="55"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 <Button Grid.Column="0" 
                         Content="Cancel"
-                        BorderThickness="1" Margin="10,10,5,5"
-                        
+                        BorderThickness="1" Margin="28,5,5,5"                      
             BorderBrush="Transparent"
                          FontWeight="SemiBold"
-                        FontSize="8">
+                        FontSize="12">
                     <Button.Resources>
                         <Style TargetType="{x:Type Button}">
                             <Style.Resources>
@@ -68,14 +75,16 @@
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button Grid.Column="1"
-                        Content="Apply"
-                        MouseLeftButtonDown="Button_MouseLeftButtonDown"
-                        BorderThickness="1" Margin="10,10,5,5"
+                <Button
+                        Content="Apply" Grid.Column="1"
+                        Margin="15,5,10,5"
+                        BorderThickness="1" 
                         x:Name="btn_Apply"
-            BorderBrush="Transparent"
-                         FontWeight="SemiBold"
-                        FontSize="8"
+                        Click="btn_Apply_Click"
+                        MouseUp="btn_Apply_MouseUp"
+                        BorderBrush="Transparent"
+                        FontWeight="SemiBold"
+                        FontSize="12"
                         Background="#91c84f">
                     <Button.Style>
                         <Style TargetType="{x:Type Button}">
@@ -90,7 +99,11 @@
                         </Style>
                     </Button.Style>
                 </Button>
+
+
             </Grid>
         </Grid>
     </Border>
+   
+    
 </UserControl>
