--- a/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
@@ -102,7 +102,7 @@
 
 
                         
-
+                        <!--Status For User-->
                         <StackPanel Orientation="Vertical" Visibility="Hidden" Margin="0,30,10,65" Grid.Row="1" Grid.Column="2" IsEnabled="False">
                             <Label HorizontalAlignment="Left" Margin="15,0,0,5" FontSize="10" FontFamily="Segoe UI" FontWeight="SemiBold" Foreground="#545864">
                                 <Label.Template>
@@ -118,8 +118,8 @@
                             </TextBox>
                         </StackPanel>
 
-
-                        <StackPanel Orientation="Vertical" Margin="0,30,4,75" Visibility="Hidden" Grid.Row="1" Grid.Column="3" IsEnabled="False">
+                            <!--Current Flight Status-->
+                            <StackPanel Orientation="Vertical" Margin="0,30,4,75" Visibility="Hidden" Grid.Row="1" Grid.Column="3" IsEnabled="False">
                             <Label HorizontalAlignment="Left" Margin="15,0,0,5" FontSize="10" FontFamily="Segoe UI" FontWeight="SemiBold" Foreground="#545864">
                                 <Label.Template>
                                     <ControlTemplate>
@@ -134,6 +134,7 @@
                             </TextBox>
                         </StackPanel>
                     </Grid>
+                        <!--Additional Information-->
                 <Grid Margin="0,0,0,204">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="35" />
@@ -154,8 +155,9 @@
                             </Grid.Resources>
                         </Grid>
             </Grid>
+                    <!--Additional Information Grid-->
                     <TextBlock Grid.Column="1" Background="Transparent" Margin="10" FontWeight="Bold" Foreground="Black" Text="Additional Information" />
-
+            
                     <Grid Height="150" Background="White">
                         <Grid Margin="10,0">
                             <Grid.RowDefinitions>
@@ -168,7 +170,7 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-
+                            <!--Latitude Grid-->
                             <Grid Grid.Row="0" Grid.Column="0" IsEnabled="{Binding ShowSaveBTn}" VerticalAlignment="Center" Margin="10,0,0,0">
                                 <Border CornerRadius="5" BorderBrush="#A9ABB1" Padding="10,0" BorderThickness="1" >
                                     <Grid Background="#F5F5F5" >
@@ -189,13 +191,11 @@
                                 <TextBlock Style="{StaticResource tbPlaceholderup}"  Text="Latitude"/>
 
                             </Grid>
-
-
+                            <!--Longtitude Grid-->
                             <Grid Grid.Row="0" Grid.Column="1" IsEnabled="{Binding ShowSaveBTn}" VerticalAlignment="Center" Margin="10,0,0,0">
                                 <Border CornerRadius="5" BorderBrush="#A9ABB1" Padding="10,0" BorderThickness="1" >
                                     <Grid
-                                            Background="#F5F5F5"
-                                            >
+                                            Background="#F5F5F5">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="6*"/>
                                             <ColumnDefinition Width="*"/>
@@ -210,9 +210,7 @@
                                 </Border>
                                 <TextBlock Style="{StaticResource tbPlaceholderup}"  Text="Longitude"/>
                             </Grid>
-
-
-
+                            <!--UAVID Grid-->
                             <Grid Grid.Row="0" Grid.Column="2" IsEnabled="{Binding ShowSaveBTn}" VerticalAlignment="Center" Margin="10,0,0,0">
                                 <Border CornerRadius="5" BorderBrush="#A9ABB1" Padding="10,0" BorderThickness="1" >
 
@@ -226,8 +224,7 @@
 
 
                             </Grid>
-
-
+                            <!--Control Key Grid-->
                             <Grid Grid.Row="0" Grid.Column="3" IsEnabled="{Binding ShowSaveBTn}" VerticalAlignment="Center" Margin="10,0,0,0">
                                 <Border CornerRadius="5" BorderBrush="#A9ABB1" Padding="10,0" BorderThickness="1">
                                     <Grid Background="#F5F5F5">
@@ -245,8 +242,7 @@
                                 </Border>
                                 <TextBlock Style="{StaticResource tbPlaceholderup}"  Text="Control Key" />
                             </Grid>
-
-
+                            <!--Secret Grid-->
                             <Grid Grid.Row="1" IsEnabled="{Binding ShowSaveBTn}" VerticalAlignment="Center" Margin="10,0,0,0">
                                 <Border CornerRadius="5" BorderBrush="#A9ABB1" Padding="10,0" BorderThickness="1" >
 
@@ -287,6 +283,7 @@
                    
                         </Grid>
                     </Grid>
+                    <!--FeedBack Grid-->
                     <TextBlock Grid.Column="1" Background="Transparent" Margin="10"
                                FontWeight="Bold"
                                Foreground="Black" Text="Feedback" />
@@ -391,8 +388,7 @@
 
                                 <TextBox  Text="{Binding UserFeedBack}" HorizontalAlignment="Stretch" IsEnabled="False"
                                           Height="70" SelectedText="N/A" VerticalContentAlignment="Top" Padding="5"
-                                          VerticalAlignment="Stretch" Grid.Row="1" Foreground="Black"
-                                      >
+                                          VerticalAlignment="Stretch" Grid.Row="1" Foreground="Black">
                                 </TextBox>
                         
                             <TextBox SelectedText="N/A" Grid.Column="1" Grid.Row="1"
@@ -402,8 +398,7 @@
 
                             <StackPanel Orientation="Horizontal" Margin="20" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right">
                                 <Button  BorderThickness="1"  Margin="0,0,10,0" Height="35" Width="130"  Content="Cancel" Command="{Binding CancelChanges_Command}"
-                                  BorderBrush="Transparent" Foreground="Black" Background="#E9E9E9"
-                                 >
+                                  BorderBrush="Transparent" Foreground="Black" Background="#E9E9E9">
                                     <Button.Resources>
                                         <Style TargetType="{x:Type Button}">
                                             <Setter Property="Visibility" Value="Visible"/>
