--- a/ideaForge/App.xaml
+++ b/ideaForge/App.xaml
@@ -222,6 +222,17 @@
                         <Setter Property="FontWeight" Value="Regular"/>
                         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
                     </Style>
+                    <Style TargetType="{x:Type DatePickerTextBox}" x:Key="Mydatepicker">
+                        <Setter Property="Control.Template">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <TextBox x:Name="PART_TextBox"
+                                       Text="{Binding Path=SelectedDate, StringFormat={}{0:dd/MM/yyyy}, 
+                                        RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" />
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
                 </ResourceDictionary>
                 <!--MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive!--> 
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
